--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -13,7 +13,7 @@
             
             <form action="" class="nav__form">
                 <input type="text" class="nav__input" placeholder="Search Art Work / Creator">
-                <button class="nav__button">Connect Wallet</button>
+                <button type="button" class="nav__button">Connect Wallet</button>
             </form>
             
         </nav>
