add swiper in section weekly

--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="discover__grid">
             <div class="discover__desc">
-                <div class="discover__title">Discover And Create NFTs</div>
+                <div class="discover__title">
+                    <h1>Discover And Create NFTs</h1>
+                </div>
                 <div class="discover__info">Discover, Create and Sell NFTs On Our NFT Marketplace With Over Thousands Of NFTs And Get a <i>$20 bonus.</i></div>
                 <form action="" class="discover__form">
                     <button class="discover__explore-btn" id="explore-btn">Explore More</button>
@@ -20,7 +22,7 @@
                 </div>
                 
                 <div class="discover__rectangle-btn">
-                    @@include('elements/btn-bar.html')
+                    @@include('elements/btnBarDiscover.html')
                 </div>
             </div> 
             <div class="discover__arrow">
