--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
         @@include('blocks/header.html')
         <main>
             @@include('blocks/discover.html')
+            @@include('blocks/weekly.html')
         </main>
         @@include('blocks/footer.html')
         <script src="./js/index.bundle.js"></script>
