--- a/src/html/blocks/elements/btnBarDiscover.html
+++ b/src/html/blocks/elements/btnBarDiscover.html
@@ -1,6 +1,6 @@
 <div class="btn-bar">
-    <button id="btnLeftDiscover"><img src="./../img/discover/line-left.svg" alt="btn-left"></button>
-    <button id="btnRightDiscover"><img src="./../img/discover/line-right.svg" alt="btn-right"></button>
+    <button id="LeftDiscover"><img src="./img/discover/line-left.svg" alt="btn-left"></button>
+    <button id="RightDiscover"><img src="./img/discover/line-right.svg" alt="btn-right"></button>
 </div>
 
 
