--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -12,7 +12,7 @@
             </ul>
             
             <form action="" class="nav__form">
-                <input type="text" class="nav__input" placeholder="Search Art Work / Creator">
+                <input id="search" type="text" class="nav__input" placeholder="Search Art Work / Creator">
                 <button type="button" class="nav__button">Connect Wallet</button>
             </form>
             
