--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
         <main>
             @@include('blocks/discover.html')
             @@include('blocks/weekly.html')
+            @@include('blocks/collection.html')
         </main>
         @@include('blocks/footer.html')
         <script src="./js/index.bundle.js"></script>
