--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -18,7 +18,25 @@
             </div>
             <div class="discover__rectangle">
                 <div class="discover__rectangle-img">
-                    <img  src="./../img/discover/rectangle-3.png" alt="Rectangle-3">
+                    <div class="swiper swiper-discover" id="swiper-discover">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img  class="discover__img" src="./img/weekly/image-2.jpg" alt="img">
+                            </div>
+
+                            <div class="swiper-slide">
+                                <img  class="discover__img" src="./img/weekly/image-3.jpg" alt="Rectangle-3">
+                            </div>
+
+                            <div class="swiper-slide">
+                                <img  class="discover__img" src="./img/weekly/image-4.jpg" alt="Rectangle-3">
+                            </div>
+
+                            <div class="swiper-slide">
+                                <img  class="discover__img" src="./img/weekly/image-1.jpg" alt="Rectangle-3">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="discover__rectangle-btn">
