--- a/src/html/blocks/elements/recent.html
+++ b/src/html/blocks/elements/recent.html
@@ -1,7 +1,9 @@
 <div class="recent">
     <div class="recent__title">
         <h4 >Recent Viewed</h4>
-        <a href="#!">...</a>
+        <button>
+            <img src="./img/recent/dots-vertical.svg" alt="btn">
+        </button>
     </div>
     <div class="recent__profile">
         <div class="recent__nickname">
