--- a/src/html/blocks/weekly.html
+++ b/src/html/blocks/weekly.html
@@ -8,9 +8,9 @@
     <div class="container-right">
         <div class="weekly__slider">
             <!-- Swiper -->
-            <div class="swiper" id="swiperWeekly">
+            <div class="swiper swiper-weekly" id="swiper-weekly">
                 <div class="swiper-wrapper">
-                    @@loop('elements/card.html', 'data/weekly.json')
+                    @@loop('elements/card-slide.html', 'data/weekly.json')
                 </div>
             </div>
             <!-- Swiper end -->
