--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
             @@include('blocks/discover.html')
             @@include('blocks/weekly.html')
             @@include('blocks/collection.html')
+            @@include('blocks/marketplace.html')
         </main>
         @@include('blocks/footer.html')
         <script src="./js/index.bundle.js"></script>
