--- a/src/html/blocks/collector.html
+++ b/src/html/blocks/collector.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="collector__img">
-                        <img src="./../../img/sellers/frame-1064.jpg" alt="">
+                        <img src="./img/sellers/frame-1064.jpg" alt="">
                     </div>
                 </div>
                 <div class="collector__ornament">
