--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -3,7 +3,7 @@
 		<div class="footer__wrapper">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<a href="#discover"><img src="./img/footer/logo.svg" alt=""></a>
+					<a href="#header"><img src="./img/footer/logo.svg" alt=""></a>
 					<a href="#discover" class="footer__name">DiveSea</a>
 				</div>
 				<ul class="footer__list">
