--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -44,7 +44,7 @@
                 </div>
             </div> 
             <div class="discover__arrow">
-                <img class="discover__arrow-1" src="./../img/discover/arrow-01.svg" alt="arrow-01">
+                <img class="discover__arrow-1" src="./img/discover/arrow-01.svg" alt="arrow-01">
             </div>
         </div>
     </div>
