--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
     <div class="container">
         <nav class="nav">
-            <a href="#discover" class="nav__logo">
+            <a href="#header" class="nav__logo">
                 <img src="./img/logo.svg" alt="Logo">
             </a>
             <ul class="nav__list">
