--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,14 +1,14 @@
 <header class="header" id="header">
     <div class="container">
         <nav class="nav">
-            <a href="#header" class="nav__logo">
+            <a href="index.html" class="nav__logo">
                 <img src="./img/logo.svg" alt="Logo">
             </a>
             <ul class="nav__list">
-                <li><a href="#discover">DISCOVER</a></li>
-                <li><a href="#creators">CREATORS</a></li>
-                <li><a href="#sell">SELL</a></li>
-                <li><a href="#stats">STATS</a></li>
+                <li><a href="discover.html" class="nav__item">DISCOVER</a></li>
+                <li><a href="#!" class="nav__item">CREATORS</a></li>
+                <li><a href="#!" class="nav__item">SELL</a></li>
+                <li><a href="#!" class="nav__item">STATS</a></li>
             </ul>
             
             <form action="" class="nav__form">
