--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -3,8 +3,8 @@
 		<div class="footer__wrapper">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<a href="#header"><img src="./img/footer/logo.svg" alt=""></a>
-					<a href="#discover" class="footer__name">DiveSea</a>
+					<a href="index.html"><img src="./img/footer/logo.svg" alt=""></a>
+					<a href="index.html" class="footer__name">DiveSea</a>
 				</div>
 				<ul class="footer__list">
 					<li><a href="#!">Privacy Policy</a></li>
